# localchat-server

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
include/: client-list.h  command-parser.h  linux-fd.h  manager.h  socket.h
include/server/: acceptor.h  addrinfo.h  binder.h  connector.h  listener.h  server.h  socket.h
include/template/: linux-fd.h
src/: client-list.cpp  command-parser.cpp  linux-fd.cpp  main.cpp  manager.cpp  socket.cpp
src/server/: acceptor.cpp  addrinfo.cpp  binder.cpp  connector.cpp  listener.cpp  server.cpp  socket.cpp
